--- a/MainPage/.classpath
+++ b/MainPage/.classpath
@@ -6,5 +6,12 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/mysql-connector-java-5.1.47.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwtext.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/org.moxieapps.gwt.highcharts-1.7.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/Json/apache-commons-lang.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/Json/commons-collections-3.2.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/Json/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/Json/ezmorph-1.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/Json/json-lib-2.2.2-jdk15.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/Json/org.apache.commons.beanutils.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
